# xab

./: .gitignore  CMakeLists.txt  main.cpp  xab_defines.h
c/: CMakeLists.txt  headers.cmake  main.c  sources.cmake
c/core/: base.h
c/layers/base_layer/: layer.c  layer.h  layer.r.h
c/layers/full_net/: full_net.c  full_net.h
c/layers/loss/: loss_fn.c  loss_fn.r.h
c/layers/models/model/: model.c  model.h  model.r.h
c/layers/models/sequential/: sequential.c  sequential.h
c/optimizers/adam/: adam.c  adam.h  adam.r.h
c/optimizers/optimizer/: optimizer.c  optimizer.r.h
c/optimizers/sgd/: sgd.c  sgd.h  sgd.r.h
